se agrega inicio de sesion

--- a/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
+++ b/src/app/ejercicio/leer-ejercicio/leer-ejercicio.component.html
@@ -77,9 +77,8 @@
                 <div class="col-sm">
                     <footer class="text-muted">
                         <div class="container">
-                            <p>{{gimnasio}} {{ubicacion}}. Todos los derechos reservados 2021.</p>
-                            <p>Instagram Gimnasio Olimpia <a href="../../">
-                                    Visitala!</a> o haznos una pregunta a <a href="../../getting-started/">Contactenos</a>.</p>
+                            <p>{{app}} </p>
+                            <p>Todos los derechos reservados 2021.</p>
                         </div>
                     </footer>
                 </div>
