--- a/src/app/cliente/leer-cliente/leer-cliente.component.html
+++ b/src/app/cliente/leer-cliente/leer-cliente.component.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
             <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
             <span class="separate"></span>
-            <a class="navbar-brand" href="#">{{gimnasio}}</a>
+            <a class="navbar-brand" href="#">{{app}}</a>
         </nav>
         <div class="container">
             <div class="row">
@@ -147,9 +147,8 @@
                 <div class="col-sm">
                     <footer class="text-muted">
                         <div class="container">
-                            <p>{{gimnasio}} {{ubicacion}}. Todos los derechos reservados 2021.</p>
-                            <p>Instagram Gimnasio Olimpia <a href="../../">
-                                    Visitala!</a> o haznos una pregunta a <a href="../../getting-started/">Contactenos</a>.</p>
+                            <p>{{app}} </p>
+                            <p>Todos los derechos reservados 2021.</p>
                         </div>
                     </footer>
                 </div>
