--- a/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/inicio-sesion.component.html
@@ -1,39 +1,48 @@
-<div class="container-fluid">
+<div class="container"
+    style="background-image: url({{prefijoUrlImagenes+fondoInicioSesion[0].valor}}); width: 100%; height: 100%">
     <div class="row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm">
-            <hr>
-            <h2 align="center">{{gimnasio}}</h2>
-            <hr>
-            <div class="form-group row">
-                <label for="contrasena" class="col-sm-3 col-form-label">Identificacion:</label>
-                <div class="col-sm-9">
-                    <input type="text" [(ngModel)]="sesion.usuario.identificacion" oninput="this.value = this.value.toUpperCase()"
-                        class="form-control form-control-sm">
+        <div class="col-12">
+            <div class="row">
+                <img src="{{prefijoUrlImagenes+logo[0].valor}}" alt="...">
+            </div>
+            <div class="row">
+                <div class="col-12 mb-4">
+                    <div class="form-floating">
+                        <input type="text" [(ngModel)]="sesion.usuario.identificacion"
+                            oninput="this.value = this.value.toUpperCase()" placeholder=""
+                            class="form-control form-control-sm" id="floatingInput">
+                        <label for="floatingInput">Identificacion</label>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-12 mb-4">
+                    <div class="form-floating">
+                        <input type="text" [(ngModel)]="sesion.usuario.contrasena"
+                            oninput="this.value = this.value.toUpperCase()" placeholder=""
+                            class="form-control form-control-sm" id="floatingInput">
+                        <label for="floatingInput">Contraseña</label>
+                    </div>
                 </div>
             </div>
-            <div class="form-group row">
-                <label for="contrasena" class="col-sm-3 col-form-label">Contraseña:</label>
-                <div class="col-sm-9">
-                    <input type="password" [(ngModel)]="sesion.usuario.contrasena" class="form-control form-control-sm">
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-12">
-                    <button class="btn btn-sm btn-success btn-block" (click)="iniciarSesion()">Iniciar Sesion</button>
+            <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                    <button class="btn font-button font-color-button color-button"
+                        (click)="iniciarSesion()">Entrar</button>
                 </div>
             </div>
         </div>
-        <div class="col-sm-3"></div>
     </div>
     <br>
+    <br>
+    <br>
     <div class="row">
-        <div class="col-sm">
+        <div class="col-12">
             <footer class="text-muted">
-                <div class="container">
-                    <p>{{gimnasio}} {{ubicacion}}. Todos los derechos reservados 2021.</p>
-                    <p>Instagram Gimnasio Olimpia <a href="../../">
-                            Visitala!</a> o haznos una pregunta a <a href="../../getting-started/">Contactenos</a>.</p>
+                <div class="container font-color font-size">
+                    <p style="text-align: center;">{{app}}</p>
+                    <p style="text-align: center;">Todos los derechos reservados</p>
                 </div>
             </footer>
         </div>
