--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="col-12" align="center">
-                    <h2 class="font-size font-color">MENU</h2>
+                    <h2 class="font-size-tittle font-color font-tittle">MENU</h2>
                     <hr>
                 </div>
             </div>
@@ -35,12 +35,14 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="d-grid gap-2">
-                                <button type="button" class="btn btn-sm btn-primary">Crear Cliente</button>
-                                <button type="button" class="btn btn-sm btn-primary">Ver Clientes</button>
-                                <button type="button" class="btn btn-sm btn-primary">Crear Ejercicio</button>
-                                <button type="button" class="btn btn-sm btn-primary">Ver Ejercicios</button>
-                                <button type="button" class="btn btn-sm btn-primary">Crear Plantilla</button>
-                                <button type="button" class="btn btn-sm btn-primary">Ver Plantillas</button>
+                                <button type="button" (click)="navegarCrearCliente()" class="btn btn-primary color-button">Crear Cliente</button>
+                                <button type="button" (click)="navegarVerClientes()" class="btn btn-primary color-button">Ver Clientes</button>
+                                <button type="button" (click)="navegarCrearEjercicio()" class="btn btn-primary color-button">Crear Ejercicio</button>
+                                <button type="button" (click)="navegarVerEjercicios()" class="btn btn-primary color-button">Ver Ejercicios</button>
+                                <button type="button" (click)="navegarCrearPlantilla()" class="btn btn-primary color-button">Crear Plantilla</button>
+                                <button type="button" (click)="navegarVerPlantillas()" class="btn btn-primary color-button">Ver Plantillas</button>
+                                <br>
+                                <button type="button" (click)="cerrarSesion(null)" class="btn btn-primary color-button">Cerrar Sesion</button>
                             </div>
                         </div>
                     </div>
