--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -3,6 +3,20 @@
     font-size: 20px;
 }
 
+.font-color{
+    color: #496bb7;
+}
+
+.font-size-tittle {
+    font-family: 'Baloo 2', cursive;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.color-button{
+    background-color: #496bb7;
+}
+
 .separate{
     margin-right: 10px;
 }
@@ -42,7 +56,8 @@
 }
 
 .esp-image{
-    
+    margin-top: -20%;
+    margin-bottom: -10%;
 }
 
 
