--- a/src/app/cliente/leer-cliente/leer-cliente.component.html
+++ b/src/app/cliente/leer-cliente/leer-cliente.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex myfont" id="wrapper">
+<div class="d-flex font-size" id="wrapper">
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="sidebar-heading">MENU </div>
         <hr>
@@ -17,34 +17,24 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify">
             <button class="btn btn-ligth" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
             <span class="separate"></span>
-            <a class="navbar-brand" href="#">{{app}}</a>
+            <a class="navbar-brand" href="#"></a>
         </nav>
         <div class="container">
             <div class="row">
-                <div class="col-sm" align="center">
+                <div class="col" align="center">
                     <hr>
-                    <h2>CLIENTES REGISTRADOS</h2>
+                    <h2 class="font-color font-size-tittle">CLIENTES</h2>
                     <hr>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-5">
-                    <label>Nombre:</label>
-                    <input type="text" [(ngModel)]="nombre" (change)="limpiarIdentificacion()"
-                        class="form-control form-control-sm" oninput="this.value = this.value.toUpperCase()">
+            <div class="input-group mb-3">
+                <div class="form-floating col-10">
+                    <input type="text" [(ngModel)]="usuario" placeholder="" class="form-control"
+                        id="floatingUsuario">
+                    <label for="floatingUsuario">Buscar por nombre o ID</label>
                 </div>
-                <div class="col-sm-5">
-                    <label>Identificacion:</label>
-                    <input type="text" [(ngModel)]="identificacion" (change)="limpiarNombre()"
-                        class="form-control form-control-sm" oninput="this.value = this.value.toUpperCase()">
-                </div>
-                <div class="col-sm-2">
-                    <label>&nbsp;</label>
-                    <button class="btn btn-sm btn-block btn-primary"
-                        (click)="consultarClientesPorNombreIdentificacion()">Buscar</button>
-                </div>
+                <button type="button" class="btn btn-outline-info col-2"><i class="icon-search"></i></button>
             </div>
-            <br>
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <ng-container *ngFor="let usuario of usuarios; let i=index">
                     <div class="accordion-item">
@@ -60,54 +50,54 @@
                             <div class="accordion-body">
                                 <div class="card">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item d-flex">
-                                            <span class="justify-content-start">
-                                                IDENTIFICACION
-                                            </span>
-                                            <span class="justify-content-end ml-auto">
-                                                {{usuario.identificacion}}
-                                            </span>
+                                        <li class="list-group-item">
+                                            <div class="form-floating">
+                                                <input type="text" [(ngModel)]="usuario.identificacion" placeholder=""
+                                                    [disabled]="true" class="form-control form-control-sm"
+                                                    id="floatingIdentificacion">
+                                                <label for="floatingIdentificacion">Identificacion</label>
+                                            </div>
                                         </li>
-                                        <li class="list-group-item d-flex">
-                                            <span class="justify-content-start">
-                                                TALLA
-                                            </span>
-                                            <span class="justify-content-end ml-auto">
-                                                {{usuario.talla}}
-                                            </span>
+                                        <li class="list-group-item">
+                                            <div class="form-floating">
+                                                <input type="text" [(ngModel)]="usuario.talla" placeholder=""
+                                                    [disabled]="true" class="form-control form-control-sm"
+                                                    id="floatingTalla">
+                                                <label for="floatingTalla">Talla</label>
+                                            </div>
                                         </li>
-                                        <li class="list-group-item d-flex">
-                                            <span class="justify-content-start">
-                                                EDAD
-                                            </span>
-                                            <span class="justify-content-end ml-auto">
-                                                {{usuario.edad}}
-                                            </span>
+                                        <li class="list-group-item">
+                                            <div class="form-floating">
+                                                <input type="text" [(ngModel)]="usuario.edad" placeholder=""
+                                                    [disabled]="true" class="form-control form-control-sm"
+                                                    id="floatingEdad">
+                                                <label for="floatingEdad">Edad</label>
+                                            </div>
                                         </li>
                                         <li class="list-group-item">
                                             <div class="row">
-                                                <div class="col-sm" style="text-align: center;">
+                                                <div class="d-grid gap-1" style="text-align: center;">
                                                     <button (click)="editar(usuario)"
-                                                        class="btn btn-sm btn-block btn-primary">ACTUALIZAR DATOS
-                                                        DEL
-                                                        CLIENTE</button>
+                                                        class="btn btn-sm btn-block btn-primary color-button">ACTUALIZAR
+                                                        DATOS DEL CLIENTE</button>
                                                 </div>
                                             </div>
                                         </li>
                                         <li class="list-group-item">
                                             <div class="row">
-                                                <div class="col-sm" style="text-align: center;">
+                                                <div class="d-grid gap-1" style="text-align: center;">
                                                     <button (click)="actualizarSuscripciones(usuario)"
-                                                        class="btn btn-sm btn-block btn-primary">ACTUALIZAR
-                                                        SUSCRIPCIONES</button>
+                                                        class="btn btn-sm btn-block btn-primary color-button">
+                                                        ACTUALIZAR SUSCRIPCIONES
+                                                    </button>
                                                 </div>
                                             </div>
                                         </li>
                                         <li class="list-group-item">
                                             <div class="row">
-                                                <div class="col-sm" style="text-align: center;">
+                                                <div class="d-grid gap-1" style="text-align: center;">
                                                     <button (click)="pesosVer(usuario)"
-                                                        class="btn btn-sm btn-block btn-primary">
+                                                        class="btn btn-sm btn-block btn-primary color-button">
                                                         VER PESOS
                                                     </button>
                                                 </div>
@@ -115,9 +105,9 @@
                                         </li>
                                         <li class="list-group-item">
                                             <div class="row">
-                                                <div class="col-sm" style="text-align: center;">
+                                                <div class="d-grid gap-1" style="text-align: center;">
                                                     <button (click)="observacionesVer(usuario)"
-                                                        class="btn btn-sm btn-block btn-primary">
+                                                        class="btn btn-sm btn-block btn-primary color-button">
                                                         VER OBSERVACIONES
                                                     </button>
                                                 </div>
@@ -125,9 +115,9 @@
                                         </li>
                                         <li class="list-group-item">
                                             <div class="row">
-                                                <div class="col-sm" style="text-align: center;">
+                                                <div class="d-grid gap-1" style="text-align: center;">
                                                     <button (click)="objetivosVer(usuario)"
-                                                        class="btn btn-sm btn-block btn-primary">
+                                                        class="btn btn-sm btn-block btn-primary color-button">
                                                         VER OBJETIVOS
                                                     </button>
                                                 </div>
@@ -135,10 +125,10 @@
                                         </li>
                                         <li class="list-group-item">
                                             <div class="row">
-                                                <div class="col-sm" style="text-align: center;">
+                                                <div class="d-grid gap-1" style="text-align: center;">
                                                     <a type="button"
                                                         href="/crear-plan?identificacion={{usuario.identificacion}}"
-                                                        class="btn btn-sm btn-primary btn-block">
+                                                        class="btn btn-sm btn-primary btn-block color-button">
                                                         VER PLAN DE ENTRENAMIENTO
                                                     </a>
                                                 </div>
@@ -150,64 +140,6 @@
                         </div>
                     </div>
                 </ng-container>
-            </div>
-            <!--<div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                            Accordion Item #1
-                        </button>
-                    </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                        data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion
-                            body.</div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            Accordion Item #2
-                        </button>
-                    </h2>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-                        data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion
-                            body. Let's imagine this being filled with some actual content.</div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseThree" aria-expanded="false"
-                            aria-controls="flush-collapseThree">
-                            Accordion Item #3
-                        </button>
-                    </h2>
-                    <div id="flush-collapseThree" class="accordion-collapse collapse"
-                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
-                            body. Nothing more exciting happening here in terms of content, but just filling up the
-                            space to make it look, at least at first glance, a bit more representative of how this would
-                            look in a real-world application.</div>
-                    </div>
-                </div>
-            </div>-->
-            <br>
-            <div class="row">
-                <div class="col-sm">
-                    <footer class="text-muted">
-                        <div class="container">
-                            <p>{{app}} </p>
-                            <p>Todos los derechos reservados 2021.</p>
-                        </div>
-                    </footer>
-                </div>
             </div>
         </div>
     </div>
